--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/react": "^2.7.6",
+    "framer-motion": "^12.6.3",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
     "pg": "^8.14.1",
