--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sazanami-portal",
   "version": "0.1.0",
+  "type": "module", 
   "private": true,
   "scripts": {
     "dev": "next dev",
