--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "sazanami-portal",
   "version": "0.1.0",
-  
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroui/react": "^2.7.6",
+    "@heroui/react": "^2.8.0-beta.0",
     "framer-motion": "^12.6.3",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
