--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@heroui/react": "^2.8.0-beta.0",
+    "@prisma/client": "^6.6.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.6.3",
-    "next": "15.2.4",
+    "next": "^15.3.0",
     "next-auth": "^4.24.11",
     "pg": "^8.14.1",
     "react": "^19.0.0",
@@ -26,6 +28,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "postcss": "^8.5.3",
+    "prisma": "^6.6.0",
     "tailwindcss": "^4.1.3",
     "typescript": "^5"
   }
