--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "prisma": "^6.6.0",
     "tailwindcss": "^4.1.3",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed" : "node prisma/seed.js"
   }
 }
